src/test/ui/lifetime-errors/ex1-return-one-existing-name-self-is-anon.stderr
error[E0621]: explicit lifetime required in the type of `self`
  --> $DIR/ex1-return-one-existing-name-self-is-anon.rs:18:30
   |
16 |     fn foo<'a>(&self, x: &'a Foo) -> &'a Foo {
   |                ----- consider changing the type of `self` to `&'a Foo`
17 | 
18 |         if true { x } else { self }
   |                              ^^^^ lifetime `'a` required

error: aborting due to previous error

